--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app='myApp'>
 
 <head>
-    <title>Sort the table on header click using AngularJS</title>
+    <title>Assignment - alert modal</title>
     <link href="style.css" rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js" type='text/javascript'></script>
     <script src='app.js' type='text/javascript'></script>
